tests/machine/x/ocaml/bool_chain.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/bool_chain.ml", line 2, characters 2-15:
2 |   print_endline "boom"
      ^^^^^^^^^^^^^
Error: This function has type string -> unit
       It is applied to too many arguments; maybe you forgot a `;'.


Context (around line 2):
   1 | let rec boom  =
   2 |   print_endline "boom"
   3 |   true
   4 | 
